# pi0.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: llama-reuse-plan.md  pi0-infer-audit.md
eval/: README.md
examples/pi0-cli/: main.cpp
include/: vlacpp.h
python/vlacpp/: __init__.py
reports/: vlacpp_libero_timing_analysis.md
src/core/: context.cpp  gguf.cpp  gguf.h  json.cpp  preprocess.cpp  types.h
src/models/: ggml_bridge.cpp  ggml_bridge.h  ggml_runtime.cpp  ggml_runtime.h  model.cpp  mtmd_bridge.cpp  mtmd_bridge.h  pi0.cpp  pi0_action_decoder.cpp  pi0_action_decoder.h  pi0_action_expert.cpp  pi0_action_expert.h  pi0_language_prefix.cpp  pi0_language_prefix.h  pi0_tokenizer.cpp  pi0_vision_mtmd.cpp  pi0_vlm.cpp  pi0_vlm.h
src/models/pi0/: pi0.cpp  pi0_action_decoder.cpp  pi0_action_expert.cpp  pi0_language_prefix.cpp  pi0_vision_mtmd.cpp  pi0_vision_mtmd.h  pi0_vlm.cpp
src/sampling/: flow.cpp  flow.h
tests/: action-head-norm-stats.json  check_cli_actions.py  check_download_lock.py  check_gguf_metadata.py  check_gguf_tensors.py  check_json_checkpoint_metadata.py  check_projector_metadata.py  check_require_full.py  check_safetensors_norm_stats_convert.py  check_tensor_inventory.py  check_truncated_manifest_convert.py  compare_action_head_reference.py  compare_pi05_action_head_reference.py  make_action_head_safetensors.py  make_pi05_action_head_safetensors.py  make_pi05_f16_safetensors.py  make_tiny_safetensors.py  openpi-graph-checkpoint.json  openpi-graph-manifest.json  pi05-action-head-checkpoint.json  projector-metadata-checkpoint.json  run_fake_openpi_policy_compare.py  test_ggml_bridge.cpp  test_mtmd_api.cpp  test_mtmd_bridge.cpp  test_pi0_action_expert.cpp  test_python_api.py  test_runtime.cpp  tiny-openpi-checkpoint.json
tools/: audit-pi0-goal.py  benchmark-openpi-vlacpp.py  check-llama-components.py  check-openpi-llama-reuse.py  compare-openpi-policy.py  compare-openpi-reference.py  convert-openpi-to-gguf.py  download-remote-file.py  download-repo-file.py  eval-libero-sim-vlacpp-lerobot-env.py  gguf_writer.py  inspect-gguf.py  inspect-safetensors.py  map-openpi-tensors.py  run-action-head-smoke.py  run-openpi-pytorch-smoke.py  summarize-libero-benchmark.py  summarize-openpi-graph.py  summarize-tensor-map.py
